@@ -1,64 +1,0 @@
-ChangeLog
-MANIFEST
-Makefile
-README
-metaconfig
-pre-distclean.rb
-setup.rb
-doc/api.en.html
-doc/api.en.rd
-doc/api.ja.html
-doc/api.ja.rd
-doc/manual.css
-ext/oci8/MANIFEST
-ext/oci8/attr.c
-ext/oci8/bind.c
-ext/oci8/const.c
-ext/oci8/define.c
-ext/oci8/depend
-ext/oci8/describe.c
-ext/oci8/descriptor.c
-ext/oci8/env.c
-ext/oci8/error.c
-ext/oci8/extconf.rb
-ext/oci8/handle.c
-ext/oci8/lob.c
-ext/oci8/oci8.c
-ext/oci8/oci8.h
-ext/oci8/oraconf.rb
-ext/oci8/oradate.c
-ext/oci8/oranumber.c
-ext/oci8/param.c
-ext/oci8/post-config.rb
-ext/oci8/server.c
-ext/oci8/session.c
-ext/oci8/stmt.c
-ext/oci8/svcctx.c
-lib/oci8.rb.in
-lib/DBD/OCI8/OCI8.rb
-support/README
-support/runit/assert.rb
-support/runit/cui/testrunner.rb
-support/runit/error.rb
-support/runit/method_mappable.rb
-support/runit/robserver.rb
-support/runit/setuppable.rb
-support/runit/teardownable.rb
-support/runit/testcase.rb
-support/runit/testfailure.rb
-support/runit/testresult.rb
-support/runit/testsuite.rb
-support/runit/version.rb
-test/README
-test/config.rb
-test/test_all.rb
-test/test_bind_raw.rb
-test/test_bind_time.rb
-test/test_break.rb
-test/test_clob.rb
-test/test_dbi.rb
-test/test_dbi_clob.rb
-test/test_describe.rb
-test/test_oci8.rb
-test/test_oradate.rb
-test/test_oranumber.rb
